// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`override-modifier.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
  abstract override foo: string;
  static override foo: string;
}

=====================================output=====================================
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
  abstract override foo: string;
  static override foo: string;
}

================================================================================
`;

exports[`override-modifier.ts format[acorn-ts] 1`] = `
"Abstract methods can only appear within an abstract class. (6:3)
  4 |   override size = 5;
  5 |   override readonly size = 5;
> 6 |   abstract override foo: string;
    |   ^
  7 |   static override foo: string;
  8 | }
  9 |
Cause: Abstract methods can only appear within an abstract class. (6:2)"
`;

exports[`parameter-property.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class D extends B {
  constructor(override foo: string) {
    super();
  }
}

=====================================output=====================================
class D extends B {
  constructor(override foo: string) {
    super();
  }
}

================================================================================
`;
